# universal

./: CMakeLists.txt  manifest.json
configs/: leo_k18_universal_node_defconfig  leo_k18_universal_node_ota_defconfig  leo_k18_universal_yimo_defconfig  leo_k18_universal_yimo_ota_defconfig  leo_k18_universal_yodaos_display_defconfig  leo_k18_universal_yodaos_display_ota_defconfig  yodaos_k18_universal_avs_defconfig  yodaos_k18_universal_avs_ota_defconfig
ota/: rokid_flash_ota_bin.conf  yodabase.recovery.fstab
workdir_asr_cn/: cf.npu  ctc.kamino_universal.cfg  device.kamino_universal.cfg  instgram.fst  lex_sym.emb.small.txt  logging.conf  rasr.emb.flmn.ini  sbbf.kamino_universal.cfg  word.ruoqi.cfg
workdir_asr_cn/model/20180917_ruoqi_flmn/: cmvn.txt  reflm.1gram.txt
